create github pages

--- a/404.html
+++ b/404.html
@@ -10,6 +10,7 @@
   <meta name="description" content="نظام معلومات سوق العمل حسن المليجي حسن محمد المليجي مصر h.meligy@beta-research.org   h.meligy@ieee.org hassan120360@hotmail.com  - LMIS Labor Labour Market Information System Egypt  TVET strategy LMIS Expert developer architect design of LMIS Models ">
   
   <title>404</title>
+  <link rel="stylesheet" href="assets/web/assets/mobirise-icons/mobirise-icons.css">
   <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
   <link rel="stylesheet" href="assets/bootstrap/css/bootstrap-grid.min.css">
   <link rel="stylesheet" href="assets/bootstrap/css/bootstrap-reboot.min.css">
@@ -42,15 +43,39 @@
 
   
 
+<section class="cid-rJrQ51sh8u mbr-fullscreen" data-bg-video="https://www.youtube.com/watch?v=36YgDDJ7XSc" id="header2-bi">
 
-  <script src="assets/web/assets/jquery/jquery.min.js"></script>
+    
+
+    <div class="mbr-overlay" style="opacity: 0.5; background-color: rgb(35, 35, 35);"></div>
+
+    <div class="container align-center">
+        <div class="row justify-content-md-center">
+            <div class="mbr-white col-md-10">
+                <h1 class="mbr-section-title mbr-bold pb-3 mbr-fonts-style display-1">
+                    Under Construction Model</h1>
+                <h3 class="mbr-section-subtitle align-center mbr-light pb-3 mbr-fonts-style display-2">Contact Info Only</h3>
+                <p class="mbr-text pb-3 mbr-fonts-style display-5">
+                    This is the modelled LMIS Labour Market Information System<br>with all processes and data design forms<br><br>Site not officially active&nbsp;<br>for more information lmis_model@outlook.com<br>Indicate what is your request and will arrange with the project manager to contact you</p>
+                <div class="mbr-section-btn"><a class="btn btn-md btn-secondary display-4" href="mailto:lmis_model@outlook.com"><span class="mbri-devices mbr-iconfont mbr-iconfont-btn"></span>LEARN MORE</a>
+                    <a class="btn btn-md btn-white-outline display-4" href="mailto:lmis_model@outlook.com"><span class="mbri-touch-swipe mbr-iconfont mbr-iconfont-btn"></span>LIVE DEMO</a></div>
+            </div>
+        </div>
+    </div>
+    
+</section>
+
+
+  <section class="engine"><a href="https://mobirise.info/u">bootstrap html templates</a></section><script src="assets/web/assets/jquery/jquery.min.js"></script>
   <script src="assets/popper/popper.min.js"></script>
   <script src="assets/bootstrap/js/bootstrap.min.js"></script>
   <script src="assets/tether/tether.min.js"></script>
+  <script src="assets/smoothscroll/smooth-scroll.js"></script>
   <script src="assets/web/assets/cookies-alert-plugin/cookies-alert-core.js"></script>
   <script src="assets/web/assets/cookies-alert-plugin/cookies-alert-script.js"></script>
-  <script src="assets/smoothscroll/smooth-scroll.js"></script>
   <script src="assets/viewportchecker/jquery.viewportchecker.js"></script>
+  <script src="assets/ytplayer/jquery.mb.ytplayer.min.js"></script>
+  <script src="assets/vimeoplayer/jquery.mb.vimeo_player.js"></script>
   <script src="assets/theme/js/script.js"></script>
   <script src="assets/formoid/formoid.min.js"></script>
   
