--- a/Social.html
+++ b/Social.html
@@ -92,7 +92,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/t">amp templates</a></section><section once="footers" class="cid-rCkuLgo5e0" id="footer6-s">
+<section class="engine"><a href="https://mobirise.info/t">free amp template</a></section><section once="footers" class="cid-rCkuLgo5e0" id="footer6-s">
 
     
 
@@ -306,7 +306,7 @@
 
                 <div data-form-type="formoid">
                     <!---Formbuilder Form--->
-                    <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="nGOCbt2JZGKWG2/aU4+R3xQmFyN/aerYWcpkrLVm83SAJWBmJdftxkGhB6gm7nsFfQZKjiL9XOhh7NiA7pxw1py/z+m9EBeNx9Ia+pmWzsPTGgTx3Mm/CaMNp6Y0UA8+.X6oiw132SAIvEb2scCNNMV8YmLFWYcxUKzpCf7DsfzXj2Qc2VQB6e8Ey5kReySs4kuj2ykVygp2Qwr3+2F0QWiRrFABQHVeABjRucP8x1o504tv2OGpwI+Shxezna16j">
+                    <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="nCNTsC9RwhJBvGGg0RpqPHrOJNZ7TaEOCuMXXY7/wkfIgRsdeO3Oyo9pN4K1yIA0C2vDG7gHNz8JuALPMylVXeL3JtjOEKx8m1M3xK7hThcLpyX1m66zWIkkVaxnkeF5.X6F39kiRrT2PGlDv6VYKT36OfWeuQJhU93QtIJLeT6ciMlmbTQR3bginM1Pw98oDHeE75RZoco4++jyZ+yUr5OHApaZIffLEg/gB4F7chxS51OS7xz0Gdi5V/Wz04Vxs">
                         <div class="row">
                             <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Thanks for filling out the form!</div>
                             <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12"></div>
@@ -391,7 +391,7 @@
         <div class="row justify-content-center">
             <div class="media-container-column col-lg-8" data-form-type="formoid">
                 <!---Formbuilder Form--->
-                <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="1WAYiALtcJ0Or1g3D9vba0vBYpj6h7lHYRbnBjPQsPikh/Mdu5p0n/GYFc1N+Bz24ncVUHgbmYLmXgOw80XUXZColxr4p8ko/7HO4p4J84nMBc3cqFRV6HOwrH0IIVdz.uX0j5SwJc2lkkrCZWPI4zeroAP/EDIwEzc9Ds0sxw10cb8yW1vknEFCgBDgPvZ+qspBXZrgugZBM09L+lJhQQZHMDz42ppNEKXz0WUZK6mcja9j4AJm92hCDWcokzkBi">
+                <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="mBF8K7s9g9a4UAZbvbZckw6ZZxNgtmSFtBu+AfRXYtevOMkxsiThMNa097JrgtDY0f5NN+hChUOxiT+oT2v3BoPMEcz+7OxU05/UtHryzBGMKNn2fR/uJFnYIWB418nl.ESuIpZ1MQj15SlhXobIlsSXRIJIn65dw2pqkS4OwX/YT9hlaWH5VWE9nOb38Tm09usbEYTv/IhxrqOs1NAa+0xVEkBWp+A8+OVllAVM4DKr5BhInVmhBE0LKe8sZ+xi0">
                     <div class="row">
                         <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Thanks for filling out the form!</div>
                         <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">
