--- a/SchoolToLaborReport.html
+++ b/SchoolToLaborReport.html
@@ -94,7 +94,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/r">free bootstrap template</a></section><section once="footers" class="cid-rCGl03kkXK" id="footer6-6s">
+<section class="engine"><a href="https://mobirise.info/n">free simple site templates</a></section><section once="footers" class="cid-rCGl03kkXK" id="footer6-6s">
 
     
 
