--- a/studies.html
+++ b/studies.html
@@ -92,7 +92,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/p">website templates free download</a></section><section once="footers" class="cid-rFLnXwGgdT" id="footer6-9f">
+<section class="engine"><a href="https://mobirise.info/n">free simple site templates</a></section><section once="footers" class="cid-rFLnXwGgdT" id="footer6-9f">
 
     
 
@@ -149,7 +149,7 @@
                     <div class="card-img">
                         <div class="mbr-overlay"></div>
                         <div class="mbr-section-btn text-center"><a href="https://mobirise.co" class="btn btn-primary display-4">Learn More</a></div>
-                        <img src="assets/images/background126.jpg" alt="LMIS" title="LMIS">
+                        <img src="assets/images/background136.jpg" alt="LMIS" title="LMIS">
                     </div>
                     <div class="card-box">
                         <h4 class="card-title mbr-fonts-style display-5">LMIS Reports &amp; Indicators</h4>
@@ -166,7 +166,7 @@
                         <div class="mbr-section-btn text-center">
                             <a href="https://mobirise.co" class="btn btn-primary display-4">Learn More</a>
                         </div>
-                        <img src="assets/images/background227.jpg" alt="LMIS" title="LMIS">
+                        <img src="assets/images/background237.jpg" alt="LMIS" title="LMIS">
                     </div>
                     <div class="card-box">
                         <h4 class="card-title mbr-fonts-style display-5">LMIS Reports &amp; Indicators</h4>
@@ -184,7 +184,7 @@
                         <div class="mbr-section-btn text-center">
                             <a href="https://mobirise.co" class="btn btn-primary display-4">Learn More</a>
                         </div>
-                        <img src="assets/images/background328.jpg" alt="LMIS" title="LMIS">
+                        <img src="assets/images/background338.jpg" alt="LMIS" title="LMIS">
                     </div>
                     <div class="card-box">
                         <h4 class="card-title mbr-fonts-style display-5"><a href="assets/files/201809SOCLMAR.pdf" target="_blank">Sadat Industrial City 2018</a></h4>
@@ -332,7 +332,7 @@
             <div class="card p-3 col-12 col-md-6 col-lg-4">
                 <div class="card-wrapper">
                     <div class="card-img">
-                        <img src="assets/images/background125.jpg" alt="Mobirise">
+                        <img src="assets/images/background135.jpg" alt="Mobirise">
                     </div>
                     <div class="card-box">
                         <h4 class="card-title mbr-fonts-style display-7"><strong>Labour Market and HR</strong></h4>
@@ -348,7 +348,7 @@
             <div class="card p-3 col-12 col-md-6 col-lg-4">
                 <div class="card-wrapper">
                     <div class="card-img">
-                        <img src="assets/images/background220.jpg" alt="Mobirise">
+                        <img src="assets/images/background230.jpg" alt="Mobirise">
                     </div>
                     <div class="card-box">
                         <h4 class="card-title mbr-fonts-style display-7"><strong>Labour Market Studies by sector</strong></h4>
@@ -364,7 +364,7 @@
             <div class="card p-3 col-12 col-md-6 col-lg-4">
                 <div class="card-wrapper">
                     <div class="card-img">
-                        <img src="assets/images/background321.jpg" alt="Mobirise">
+                        <img src="assets/images/background331.jpg" alt="Mobirise">
                     </div>
                     <div class="card-box">
                         <h4 class="card-title mbr-fonts-style display-7"><strong>Labour Market Studies</strong></h4>
