--- a/tools.html
+++ b/tools.html
@@ -92,7 +92,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/v">html templates</a></section><section once="footers" class="cid-rCkuLgo5e0" id="footer6-1e">
+<section class="engine"><a href="https://mobirise.info/e">how to make your own site</a></section><section once="footers" class="cid-rCkuLgo5e0" id="footer6-1e">
 
     
 
@@ -140,7 +140,7 @@
             <div class="card p-3 col-12 col-md-6 col-lg-3">
                 <div class="card-wrapper">
                     <div class="card-img">
-                        <img src="assets/images/background126.jpg" alt="LMIS" title="LMIS">
+                        <img src="assets/images/background136.jpg" alt="LMIS" title="LMIS">
                     </div>
                     <div class="card-box">
                         <h4 class="card-title mbr-fonts-style display-7"><strong>LMIS Map</strong></h4>
@@ -155,7 +155,7 @@
             <div class="card p-3 col-12 col-md-6 col-lg-3">
                 <div class="card-wrapper">
                     <div class="card-img">
-                        <img src="assets/images/background227.jpg" alt="LMIS" title="LMIS">
+                        <img src="assets/images/background237.jpg" alt="LMIS" title="LMIS">
                     </div>
                     <div class="card-box">
                         <h4 class="card-title mbr-fonts-style display-7"><strong>
@@ -170,7 +170,7 @@
             <div class="card p-3 col-12 col-md-6 col-lg-3">
                 <div class="card-wrapper">
                     <div class="card-img">
-                        <img src="assets/images/background328.jpg" alt="LMIS" title="LMIS">
+                        <img src="assets/images/background338.jpg" alt="LMIS" title="LMIS">
                     </div>
                     <div class="card-box">
                         <h4 class="card-title mbr-fonts-style display-7"><strong>Surveies</strong></h4>
@@ -185,7 +185,7 @@
             <div class="card p-3 col-12 col-md-6 col-lg-3">
                 <div class="card-wrapper">
                     <div class="card-img">
-                        <img src="assets/images/background429.jpg" alt="LMIS" title="LMIS">
+                        <img src="assets/images/background439.jpg" alt="LMIS" title="LMIS">
                     </div>
                     <div class="card-box">
                         <h4 class="card-title mbr-fonts-style display-7"><strong>
