--- a/training.html
+++ b/training.html
@@ -93,7 +93,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/m">site design templates</a></section><section once="footers" class="cid-rCkuLgo5e0" id="footer6-18">
+<section class="engine"><a href="https://mobirise.info/b">create a website for free</a></section><section once="footers" class="cid-rCkuLgo5e0" id="footer6-18">
 
     
 
